fix: ticket card spacing and alignment

--- a/frontend/src/components/TicketCard/ticketCard.scss
+++ b/frontend/src/components/TicketCard/ticketCard.scss
@@ -3,6 +3,9 @@
 .ticket-card {
 	box-shadow: $box-shadow;
 
+	.card-header {
+		border-bottom: none;
+	}
 	.card-img-top {
 		@include breakpoint-max(md) {
 			height: 252px;
